[gd_scene load_steps=5 format=3 uid="uid://ssafa1ig51pi"]

[ext_resource type="Texture2D" uid="uid://bo67lfrt341sg" path="res://icon.png" id="1"]
[ext_resource type="Texture2D" uid="uid://be8n8yuows6rt" path="res://WIP/ranger-big.png" id="2"]
[ext_resource type="Script" path="res://Interface/Loadouts.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://6fbula7f8jlt" path="res://WIP/bonfire.png" id="4"]

[node name="Loadouts" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SwordDud" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Sword-Dud"
icon = ExtResource("1")

[node name="BowDud" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Bow-Dud"
icon = ExtResource("1")

[node name="Sprite2D" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2")

[node name="SkillContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SkillBar" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/SkillContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer/SkillContainer"]
layout_mode = 2

[node name="SkillGrid" type="GridContainer" parent="VBoxContainer/HBoxContainer/SkillContainer"]
layout_mode = 2
columns = 8

[node name="ControlButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoadoutsSelect" type="OptionButton" parent="VBoxContainer/ControlButtons"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/ControlButtons"]
layout_mode = 2
text = "Back"

[node name="TestButton" type="Button" parent="VBoxContainer/ControlButtons"]
layout_mode = 2
text = "Test Loadout"

[node name="SaveButton" type="Button" parent="VBoxContainer/ControlButtons"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="VBoxContainer/ControlButtons"]
layout_mode = 2
text = "Load"

[node name="bonfire" type="Sprite2D" parent="."]
position = Vector2(271.127, 220.207)
scale = Vector2(2.45676, 2.45676)
texture = ExtResource("4")

[connection signal="button_up" from="VBoxContainer/HBoxContainer/VBoxContainer/SwordDud" to="." method="_on_SwordDud_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/VBoxContainer/BowDud" to="." method="_on_BowDud_button_up"]
[connection signal="button_up" from="VBoxContainer/ControlButtons/BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="button_up" from="VBoxContainer/ControlButtons/TestButton" to="." method="_on_TestButton_button_up"]
[connection signal="button_up" from="VBoxContainer/ControlButtons/SaveButton" to="." method="_on_SaveButton_button_up"]
[connection signal="button_up" from="VBoxContainer/ControlButtons/LoadButton" to="." method="_on_LoadButton_button_up"]
